force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/RE_Depot_Pricing_BackboneHistory__c.object-meta.xml
<CustomObject>
    <label>Depot Pricing Backbone History</label>
    <nameField>
        <displayFormat>DPBH-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Depot Pricing Backbone History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>