force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Depot Pricing Backbone Created By ID</inlineHelpText>
    <label>Depot Pricing Backbone Created By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Depot_Pricing_History</relationshipName>
    <type>Lookup</type>
</CustomField>