force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <inlineHelpText>Depot Pricing Backbone Created Date</inlineHelpText>
    <label>Depot Pricing Backbone Created Date</label>
    <type>DateTime</type>
</CustomField>