force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/Depot_Backbone__c.field-meta.xml
<CustomField>
    <fullName>Depot_Backbone__c</fullName>
    <formula>&quot;RE_&quot; +  RE_Country_Code__c + &quot;_&quot; + RE_Product_Name__r.Name + &quot;_&quot; + RE_Depot_Name__r.RE_Region_Name__c + &quot;_&quot; + RE_Depot_Name__r.Name</formula>
    <label>Depot Backbone</label>
    <type>Text</type>
</CustomField>