force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Depot Pricing Backbone Deleted</label>
    <type>Checkbox</type>
</CustomField>