force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>LastActivityDate__c</fullName>
    <inlineHelpText>Depot Pricing Last Activity Date</inlineHelpText>
    <label>Depot Pricing Last Activity Date</label>
    <type>Date</type>
</CustomField>