force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Depot Pricing Last Modified By ID</inlineHelpText>
    <label>Depot Pricing Last Modified By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Depot_Pricing_BackboneHistory1</relationshipName>
    <type>Lookup</type>
</CustomField>