force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <inlineHelpText>Depot Pricing Last Modified Date</inlineHelpText>
    <label>Depot Pricing Last Modified Date</label>
    <type>DateTime</type>
</CustomField>