force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/LastReferencedDate__c.field-meta.xml
<CustomField>
    <fullName>LastReferencedDate__c</fullName>
    <inlineHelpText>Depot Pricing Last Referenced Date</inlineHelpText>
    <label>Depot Pricing Last Referenced Date</label>
    <type>DateTime</type>
</CustomField>