force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/LastViewedDate__c.field-meta.xml
<CustomField>
    <fullName>LastViewedDate__c</fullName>
    <inlineHelpText>Depot Pricing Backbone Last Viewed Date</inlineHelpText>
    <label>Depot Pricing Backbone Last Viewed Date</label>
    <type>DateTime</type>
</CustomField>