force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depot Pricing Backbone Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Depot_Pricing_Backbone_History3</relationshipName>
    <type>Lookup</type>
</CustomField>