force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/Parent_RecordId__c.field-meta.xml
<CustomField>
    <fullName>Parent_RecordId__c</fullName>
    <label>Depot Pricing Backbone Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>