force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_CND_CanadianDailyRack_Location__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_CanadianDailyRack_Location__c</fullName>
    <description>CanadianDailyRack Location used in Canadiandailyrack and Canadiandailyrack7day output files</description>
    <label>CanadianDailyRack Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barepoint</fullName>
            </value>
            <value>
                <fullName>Belleville</fullName>
            </value>
            <value>
                <fullName>Calgary</fullName>
            </value>
            <value>
                <fullName>Edmonton</fullName>
            </value>
            <value>
                <fullName>Hamilton</fullName>
            </value>
            <value>
                <fullName>Kamloops</fullName>
            </value>
            <value>
                <fullName>Kingston</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Montreal</fullName>
            </value>
            <value>
                <fullName>Ottawa</fullName>
            </value>
            <value>
                <fullName>PrinceGeorge</fullName>
            </value>
            <value>
                <fullName>QuebecCity</fullName>
            </value>
            <value>
                <fullName>Regina</fullName>
            </value>
            <value>
                <fullName>Sarnia</fullName>
            </value>
            <value>
                <fullName>Saskatoon</fullName>
            </value>
            <value>
                <fullName>Saultstemarie</fullName>
            </value>
            <value>
                <fullName>Thunderbay</fullName>
            </value>
            <value>
                <fullName>Toronto</fullName>
            </value>
            <value>
                <fullName>Vancouver</fullName>
            </value>
            <value>
                <fullName>Winnipeg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>