force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_CND_Differential_Basis__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Differential_Basis__c</fullName>
    <formula>IF(RE_CND_Is_Base_Product__c == True, TEXT(RE_CND_Rack_Differential_Basis__c) + &apos; &apos; +  TEXT(RE_Product_Classification__c), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Differential Basis</label>
    <type>Text</type>
</CustomField>