force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_CND_Is_Base_Product__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Is_Base_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Base Product?</label>
    <type>Checkbox</type>
</CustomField>