force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_CND_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Location_Code__c</fullName>
    <formula>RE_Location_Name__r.RE_Location_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Code</label>
    <type>Text</type>
</CustomField>