force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_CND_PA__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_PA__c</fullName>
    <formula>&apos;OPIS_&apos;+ TEXT(RE_CND_PA_loc_code__c) + &apos;_&apos; + TEXT(RE_CND_PA_Product_code__c) +&apos;_CA_Spot_P&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PA</label>
    <type>Text</type>
</CustomField>