force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_CND_PA_loc_code__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_PA_loc_code__c</fullName>
    <description>PA loc code used in Canadiandailyrack and Canadiandailyrack7day output files</description>
    <label>PA loc code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Rack_BarePoint_Shell</fullName>
            </value>
            <value>
                <fullName>Rack_Bellville_Shell</fullName>
            </value>
            <value>
                <fullName>Rack_Calgary_Shell</fullName>
            </value>
            <value>
                <fullName>Rack_Edmonton_Shell</fullName>
            </value>
            <value>
                <fullName>Rack_Hamilton_Shell</fullName>
            </value>
            <value>
                <fullName>Rack_Kamloops_Shell</fullName>
            </value>
            <value>
                <fullName>Rack_Kingston_Shell</fullName>
            </value>
            <value>
                <fullName>Rack_London_Shell</fullName>
            </value>
            <value>
                <fullName>Rack_Montreal_Shell</fullName>
            </value>
            <value>
                <fullName>Rack_Ottawa_Shell</fullName>
            </value>
            <value>
                <fullName>Rack_PGeorge_Shell</fullName>
            </value>
            <value>
                <fullName>Rack_Quebec_Shell</fullName>
            </value>
            <value>
                <fullName>Rack_Reginia_Shell</fullName>
            </value>
            <value>
                <fullName>Rack_Sarnia_Shell</fullName>
            </value>
            <value>
                <fullName>Rack_Saskatoon_Shell</fullName>
            </value>
            <value>
                <fullName>Rack_SSM_Shell</fullName>
            </value>
            <value>
                <fullName>Rack_TBay_Shell</fullName>
            </value>
            <value>
                <fullName>Rack_Toronto_Shell</fullName>
            </value>
            <value>
                <fullName>Rack_Vancouver_Shell</fullName>
            </value>
            <value>
                <fullName>Rack_WPG_Shell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>