force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_CND_Parent_Rack__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Parent_Rack__c</fullName>
    <label>Parent Rack</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RE_CND_Racks</valueSetName>
    </valueSet>
</CustomField>