force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_CND_Plant_Pricing_Basis__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Plant_Pricing_Basis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Pricing Basis</label>
    <referenceTo>RE_Location__c</referenceTo>
    <relationshipLabel>Depot Pricing Backbone History(Plant Pricing Basis)</relationshipLabel>
    <relationshipName>Depot_Pricing_Backbone_CND_Plant_PBH</relationshipName>
    <type>Lookup</type>
</CustomField>