force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_CND_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Product_Group__c</fullName>
    <formula>TEXT(RE_Product_Name__r.RE_CND_Product_Groups__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group</label>
    <type>Text</type>
</CustomField>