force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_CND_Product_Pricing_Basis__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Product_Pricing_Basis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Pricing Basis</label>
    <referenceTo>RE_Product__c</referenceTo>
    <relationshipLabel>Depot Pricing Backbone History(Product Pricing Basis)</relationshipLabel>
    <relationshipName>Depot_Pricing_Backbone_CND_Product_PBH</relationshipName>
    <type>Lookup</type>
</CustomField>