force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_CND_Rack_Differential_Basis__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Rack_Differential_Basis__c</fullName>
    <label>Rack Differential Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RE_CND_Racks</valueSetName>
    </valueSet>
</CustomField>