force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_CND_Rack_Prices_Product__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Rack_Prices_Product__c</fullName>
    <label>Rack Prices Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UNL</fullName>
            </value>
            <value>
                <fullName>E10</fullName>
            </value>
            <value>
                <fullName>MID</fullName>
            </value>
            <value>
                <fullName>PRE</fullName>
            </value>
            <value>
                <fullName>ULSD</fullName>
            </value>
            <value>
                <fullName>BIODIESEL</fullName>
            </value>
            <value>
                <fullName>STOVE</fullName>
            </value>
            <value>
                <fullName>FUR</fullName>
            </value>
            <value>
                <fullName>ULSFUM</fullName>
            </value>
            <value>
                <fullName>ULS1</fullName>
            </value>
            <value>
                <fullName>ULSDQC02</fullName>
            </value>
            <value>
                <fullName>ULSDQC05</fullName>
            </value>
            <value>
                <fullName>ULSDQC06</fullName>
            </value>
            <value>
                <fullName>ULSDQC07</fullName>
            </value>
            <value>
                <fullName>ULSDQC09</fullName>
            </value>
            <value>
                <fullName>ULSFUMQC02</fullName>
            </value>
            <value>
                <fullName>ULSFUMQC05</fullName>
            </value>
            <value>
                <fullName>ULSFUMQC06</fullName>
            </value>
            <value>
                <fullName>ULSFUMQC07</fullName>
            </value>
            <value>
                <fullName>ULSFUMQC09</fullName>
            </value>
            <value>
                <fullName>ULSDONO3</fullName>
            </value>
            <value>
                <fullName>ULSDONO4</fullName>
            </value>
            <value>
                <fullName>ULSDONO5</fullName>
            </value>
            <value>
                <fullName>ULSDONO6</fullName>
            </value>
            <value>
                <fullName>ULSFUMONO3</fullName>
            </value>
            <value>
                <fullName>ULSFUMONO4</fullName>
            </value>
            <value>
                <fullName>ULSFUMONO5</fullName>
            </value>
            <value>
                <fullName>ULSFUMONO6</fullName>
            </value>
            <value>
                <fullName>ULSDAB03</fullName>
            </value>
            <value>
                <fullName>ULSDAB04</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>