force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_CND_Req_in_DailyRackChange_Notifi__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Req_in_DailyRackChange_Notifi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Req. in DailyRackChange Notification?</label>
    <type>Checkbox</type>
</CustomField>