force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_CND_Required_CanadianDailyRack7Day__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Required_CanadianDailyRack7Day__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is it required to be used in Canadiandailyrack7Day output file?</description>
    <label>Required in CanadianDailyRack7Day File?</label>
    <type>Checkbox</type>
</CustomField>