force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_CND_Required_in_Rack_Prices__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Required_in_Rack_Prices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required in Rack Prices?</label>
    <type>Checkbox</type>
</CustomField>