force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_Comments__c.field-meta.xml
<CustomField>
    <fullName>RE_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>