force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_Country__c.field-meta.xml
<CustomField>
    <fullName>RE_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Depot Pricing Backbone History</relationshipLabel>
    <relationshipName>Depot_Pricing_BackboneHistory</relationshipName>
    <type>Lookup</type>
</CustomField>