force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_Insurance_Percentage__c.field-meta.xml
<CustomField>
    <fullName>RE_Insurance_Percentage__c</fullName>
    <label>Insurance Percentage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>