force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_Intraday_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>RE_Intraday_Price_Adjustment__c</fullName>
    <label>Intraday Price Adjustment</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>