force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>RE_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>