force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_IsDistillisationRate__c.field-meta.xml
<CustomField>
    <fullName>RE_IsDistillisationRate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDistillisationRate</label>
    <type>Checkbox</type>
</CustomField>