force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Location_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Name</label>
    <referenceTo>RE_Location__c</referenceTo>
    <relationshipLabel>Depot Pricing Backbone History(Location Name)</relationshipLabel>
    <relationshipName>Depot_Pricing_Backbone_CND_LocHistory</relationshipName>
    <type>Lookup</type>
</CustomField>