force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_PH_BIO_3__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_BIO_3__c</fullName>
    <label>BIO 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UCAP RBD CNO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>