force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_PH_Bio_Percent__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_Bio_Percent__c</fullName>
    <label>Bio %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>