force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_PH_Blend_Percentage__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_Blend_Percentage__c</fullName>
    <label>Blend %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>