force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_PH_Freight_Quote__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_Freight_Quote__c</fullName>
    <label>Freight Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FREIGHT JPI01</fullName>
            </value>
            <value>
                <fullName>FREIGHT MPI08</fullName>
            </value>
            <value>
                <fullName>FREIGHT GPI02</fullName>
            </value>
            <value>
                <fullName>FREIGHT S2P02</fullName>
            </value>
            <value>
                <fullName>FREIGHT S2P01</fullName>
            </value>
            <value>
                <fullName>SIN HK 30KT CLEAN</fullName>
            </value>
            <value>
                <fullName>FREIGHT GPI01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>