force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_PH_MISC_Port_Charges__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_MISC_Port_Charges__c</fullName>
    <label>MISC - Port Charges</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>