force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_PH_Ocean_Cost__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_Ocean_Cost__c</fullName>
    <label>Ocean Cost %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>